chore: update JVM arguments in `build.gradle` for JMH